tests/parse_print/autogen/320~final/stderr.expected
Error:
    tests/parse_print/autogen/320~final/spec.essence:5:5:
  |
5 |     (partition() : `partition from bool`) - partition({false}) in
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Type error:
	Expected: number, set, mset, relation or function
	Got: partition from bool

tests/parse_print/autogen/320~final/spec.essence:5:45:
  |
5 |     (partition() : `partition from bool`) - partition({false}) in
  |                                             ^^^^^^^^^^^^^^^^^^
Type error:
	Expected: number, set, mset, relation or function
	Got: partition from bool
